--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,16 @@
 @import "tailwindcss";
 
-@theme{
+@theme {
     --font-urbanist: 'Urbanist', sans-serif;
-    --font-poppins: 'Poppins', sans-serif;
     --font-size-base: 1rem;
     --font-size-lg: 1.125rem;
     --font-size-sm: 0.875rem;
+}
 
+* {
+    font-family: var(--font-urbanist) !important;
+}
+
+body {
+    font-family: var(--font-urbanist);
 }
